# round_the_clock_midi_recording

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
docs/: api_specification.md  developer_guide.md  environment_setup.md  implementation_plan.md  operation_manual.md  project_scope.md  requirements.md  requirements_checklist.md  technical_specification.md  test_plan.md  use_cases.md
src/config/: manager.py
src/gui/: main_window.py
src/midi/: device_manager.py  monitor.py  receiver.py  writer.py
src/utils/: exceptions.py  logger.py  timer.py
tests/: test_midi_receiver.py
